--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,19 @@
+<% if logged_in? %>
+  <div class="row">
+    <aside class="col-md-4">
+      <section class="user_info">
+        <%= render 'shared/user_info' %>
+      </section>
+      <section class="micropost_form">
+        <%= render 'shared/micropost_form' %>
+      </section>
+    </aside>
+    <div class="col-md-8">
+      <h3>Micropost Feed</h3>
+      <%= render 'shared/feed' %>
+  </div>
+<% else %>
+
 <% provide(:title, "欢迎来到UMarket") %>
 
 <div class="center jumbotron">
@@ -13,3 +29,4 @@
 
 <%= link_to image_tag("timg.jpg", alt: "Rails logo"),
             'http://www.ucas.ac.cn/' %>
+<% end %>
